@@ -1,3 +1,6 @@
+For 1.17.7:
+	- javascript problem creating some nodes that had FreeWRLPTR defined fields fixed.
+
 For 1.17.6;
 	- now scans scientific notation floats correctly.
 
